--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,6 +1,10 @@
 {{> head }}
 <body>
-    {{{ body }}}
+    {{>navbar  }}
+    
+    <div class="container">
+        {{{ body }}}
+    </div>
 
 {{> footer}}
 </body>
