add new book form

--- a/views/pages/add.hbs
+++ b/views/pages/add.hbs
@@ -1,1 +1,52 @@
-<h2>Add new Book</h2>
+<h2>Add new Book</h2>   
+
+
+{{!--  form  --}}
+
+<!-- 
+    =======================================================================
+
+    This is a working contact form. To receive email, 
+    Replace YOUR_ACCESS_KEY_HERE with your actual Access Key.
+
+    Create Access Key here  https://web3forms.com/
+
+    Surjith S M (@surjithctly)
+    =======================================================================
+ -->
+
+
+<div class="flex items-center min-h-screen bg-gray-50 dark:bg-gray-900">
+    <div class="container mx-auto">
+        <div class="max-w-xl mx-auto my-10 bg-white p-5 rounded-md shadow-sm">
+            <div class="text-center">
+                <h1 class="my-3 text-3xl font-semibold text-gray-700 dark:text-gray-200">Add New Book</h1>
+            </div>
+            <div class="m-7">
+                <form action="" method="POST" id="form">
+
+
+                    <div class="mb-6">
+                        <label for="title" class="block mb-2 text-sm text-gray-600 dark:text-gray-400">Title</label>
+                        <input type="text" name="title" id="title" placeholder="title" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
+                    </div>
+                    <div class="mb-6">
+                        <label for="pirce" class="block mb-2 text-sm text-gray-600 dark:text-gray-400">Price</label>
+                        <input type="number" name="pirce" id="pirce" placeholder="price" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
+                    </div>
+                    <div class="mb-6">
+
+                        <label for="img" class="text-sm text-gray-600 dark:text-gray-400">Img Src</label>
+                        <input type="text" name="img" id="img" placeholder="img src" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
+                    </div>
+                   
+                    <div class="mb-6 flex justify-end">
+                        <button type="submit" class="btn-lg px-12 py-4 text-white bg-indigo-500 rounded-md focus:bg-indigo-600 focus:outline-none">👉 Add Book</button>
+                    </div>
+                    <p class="text-base text-center text-gray-400" id="result">
+                    </p>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
