--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,7 +2,7 @@
 <body>
     {{>navbar  }}
     
-    <div class="container">
+    <div class="container mx-auto">
         {{{ body }}}
     </div>
 
