--- a/views/pages/add.hbs
+++ b/views/pages/add.hbs
@@ -1,22 +1,7 @@
-<h2>Add new Book</h2>   
 
 
-{{!--  form  --}}
-
-<!-- 
-    =======================================================================
-
-    This is a working contact form. To receive email, 
-    Replace YOUR_ACCESS_KEY_HERE with your actual Access Key.
-
-    Create Access Key here  https://web3forms.com/
-
-    Surjith S M (@surjithctly)
-    =======================================================================
- -->
-
-
-<div class="flex items-center min-h-screen bg-gray-50 dark:bg-gray-900">
+<div class="mt-4 items-center min-h-screen bg-gray-50 dark:bg-gray-900">
+<h2 class="text-2xl p-6 text-indigo-600">Add new Book</h2>   
     <div class="container mx-auto">
         <div class="max-w-xl mx-auto my-10 bg-white p-5 rounded-md shadow-sm">
             <div class="text-center">
