--- a/views/pages/add.hbs
+++ b/views/pages/add.hbs
@@ -1,11 +1,10 @@
 
 
-<div class="mt-4 items-center min-h-screen bg-gray-50 dark:bg-gray-900">
-<h2 class="text-2xl p-6 text-indigo-600">Add new Book</h2>   
+<div class="mt-4 items-center py-12 bg-gray-100 dark:bg-gray-900 rounded-lg">
     <div class="container mx-auto">
         <div class="max-w-xl mx-auto my-10 bg-white p-5 rounded-md shadow-sm">
             <div class="text-center">
-                <h1 class="my-3 text-3xl font-semibold text-gray-700 dark:text-gray-200">Add New Book</h1>
+                <h1 class="text-3xl font-semibold text-gray-700 dark:text-gray-200">Add New Book</h1>
             </div>
             <div class="m-7">
                 <form action="" method="POST" id="form">
