--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between flex-wrap bg-yellow-500  pl-12 pr-12">
+<nav class="flex items-center justify-between flex-wrap bg-indigo-600  pl-12 pr-12">
   <div class="flex items-center flex-no-shrink text-white mr-6">
     <svg class=" w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg">
       <path
