--- a/views/pages/add.hbs
+++ b/views/pages/add.hbs
@@ -1,5 +1,3 @@
-
-
 <div class="mt-4 items-center py-12 bg-gray-100 dark:bg-gray-900 rounded-lg">
     <div class="container mx-auto">
         <div class="max-w-xl mx-auto my-10 bg-white p-5 rounded-md shadow-sm">
@@ -7,7 +5,7 @@
                 <h1 class="text-3xl font-semibold text-gray-700 dark:text-gray-200">Add New Book</h1>
             </div>
             <div class="m-7">
-                <form action="" method="POST" id="form">
+                <form action="/add" method="POST" id="form">
 
 
                     <div class="mb-6">
@@ -16,7 +14,7 @@
                     </div>
                     <div class="mb-6">
                         <label for="pirce" class="block mb-2 text-sm text-gray-600 dark:text-gray-400">Price</label>
-                        <input type="number" name="pirce" id="pirce" placeholder="price" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
+                        <input type="number" name="price" id="pirce" placeholder="price" required class="w-full px-3 py-2 placeholder-gray-300 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-indigo-100 focus:border-indigo-300 dark:bg-gray-700 dark:text-white dark:placeholder-gray-500 dark:border-gray-600 dark:focus:ring-gray-900 dark:focus:border-gray-500" />
                     </div>
                     <div class="mb-6">
 
