--- a/views/pages/books.hbs
+++ b/views/pages/books.hbs
@@ -1,1 +1,30 @@
-<h2>Books Page</h2>
+<h2 class="py-5 text-3xl font-semibold text-gray-700 dark:text-gray-200">Books Page</h2>
+
+
+{{#if books.length}}
+<div class="mt-12 flex justify-between">
+{{#each books  }}   
+   <div class="mb-4">
+  <div class="flex flex-col justify-between w-72 sm:w-96 h-96 bg-white bg-center text-gray-800 shadow-md overflow-hidden cursor-pointer" style="background-image:url('https://placeimg.com/480/480/any')">
+    <div class="flex justify-between items-center ml-4 pr-8">
+      <a href="/books/{{ id }}" target="_new" class="bg-red-600 text-white bg-opacity-95 shadow px-2 py-1 flex items-center font-bold text-xs rounded">Some information</a>
+    </div>
+    <div class="bg-white bg-opacity-95 shadow-md rounded-r-xl p-4 flex flex-col mr-4 mb-8">
+      <h3 class="text-xl font-bold pb-2">Title: {{ title }}</h3>
+      <p class="truncate text-gray-500 text-sm">sdvsd</p>
+      <div class="flex justify-between items-center">
+        <span class="text-gray-400 text-xs">Price: <span class="price">{{price}}</span></span>
+      </div>
+    </div>   
+  </div>
+</div>
+{{/each  }}
+</div>
+
+ {{else}}   
+
+ {{!-- <div class="flex justify-center items-center absolute -inset-1/2	">
+        <span class="animate-ping absolute inline-flex w-20 h-20 rounded-full bg-purple-400 opacity-75"></span>
+    </div> --}}
+    <p class="text-xl">There is no books yet</p>
+{{/if}}
