--- a/views/pages/books.hbs
+++ b/views/pages/books.hbs
@@ -9,11 +9,18 @@
     <div class="flex justify-between items-center ml-4 pr-8">
       <a href="/books/{{ id }}" target="_new" class="bg-red-600 text-white bg-opacity-95 shadow px-2 py-1 flex items-center font-bold text-xs rounded">Some information</a>
     </div>
-    <div class="bg-white bg-opacity-95 shadow-md rounded-r-xl p-4 flex flex-col mr-4 mb-8">
-      <h3 class="text-xl font-bold pb-2">Title: {{ title }}</h3>
-      <p class="truncate text-gray-500 text-sm">sdvsd</p>
+    <div class="bg-white bg-opacity-95 shadow-md rounded-r-xl p-4 flex justify-between mr-4 mb-8">
+      <div class="flex flex-col items-center">
+        <h3 class="text-xl font-bold pb-2">Title: {{ title }}</h3>
       <div class="flex justify-between items-center">
         <span class="text-gray-400 text-xs">Price: <span class="price">{{price}}</span></span>
+      </div>
+      </div>
+      <div class="flex items-center justify-between w-44">
+        <a href="/books/{{id}}/edit" class="bg-yellow-600 text-center w-20 py-4 hover:bg-yellow-700 hover:text-white">Edit</a>
+        <form action="/card/add" method="POST">
+        <button class="w-20 py-1 bg-blue-600 text-white hover:bg-blue-700 text-center hover:text-white">Add to Card</button>
+      </form>
       </div>
     </div>   
   </div>
