--- a/views/pages/editbook.hbs
+++ b/views/pages/editbook.hbs
@@ -28,7 +28,7 @@
                         <button type="submit"
                             class="btn-lg px-12 py-4 text-white bg-yellow-600 rounded-md focus:bg-yellow-600 focus:outline-none">👉
                             Edit Book</button>
-                        <input type="hidden" value="{{book.id}}" name="id">
+                        <input type="hidden" value="{{book._id}}" name="_id">
 
                     </div>
                     <p class="text-base text-center text-gray-400" id="result">
