--- a/views/pages/card.hbs
+++ b/views/pages/card.hbs
@@ -56,9 +56,11 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z" />
                                             </svg>
                                         </div>
-                                        <button class="w-4 mr-2 transform hover:text-purple-500 hover:scale-110 js-remove" data-id="{{id}}">
-                                            remove
-                                        </button>
+                                            <button class="w-4 mr-2 transform hover:text-purple-500 hover:scale-110 js-remove" data-id="{{_id}}">
+                                                remove
+                                            </button>
+                                        </form>
+                                        
                                     </div>
                                 </td>
                             </tr>
