--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -62,6 +62,18 @@
         Card
       </a>
       {{/if }}
+
+
+      {{#if isOrder }}
+      <a href="/order"
+        class="block bg-gray-700 p-3 mt-4 h-full lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">
+        Order
+      </a>
+      {{else }}
+      <a href="/order" class="block  p-3 mt-4 h-full lg:inline-block lg:mt-0 text-teal-lighter hover:text-white mr-4">
+        Order
+      </a>
+      {{/if }}
     </div>
     <div>
       <a href="#"
